Android GUI: Reformat code with Eclipse (shouldn't it do this automatically?)